--- a/templates/pdf/employee_report.html
+++ b/templates/pdf/employee_report.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>{{name}} Report</title>
 </head>
+
 <body>
     <h1>
         Reporte de {{name}} {{lastname}}
@@ -38,10 +40,7 @@
         </tr>
     </table>
     <div>
-        <img 
-        src="https://i.ibb.co/LrQzzDW/Dream-Factory.png"
-        alt="Dream work logo"
-      >
+        <img src="https://i.ibb.co/LrQzzDW/Dream-Factory.png" alt="Dream work logo">
     </div>
 
 </body>
@@ -49,30 +48,39 @@
     html {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 18px;
-     }
-     h1 {
+    }
+
+    h1 {
         padding-top: 50px;
         text-align: center;
         font-size: 25px;
-     }
-     table {
+    }
+
+    table {
         padding-top: 25px;
-     }
-     td {
+    }
+
+    td {
         padding: 14px 0px;
-     }
-     tbody td{
+    }
+
+    tbody td {
         text-align: center;
-     }
-     th, td {
+    }
+
+    th,
+    td {
         border-bottom: 1px solid #ddd;
-     }
+    }
+
     div {
         padding-top: 25px;
         text-align: center;
     }
+
     img {
         width: 50%;
     }
 </style>
+
 </html>
